# helden-backend

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  seed.py
app/: database.py  main.py
app/agents/: config.py  llm_client.py  prompts.py
app/api/: routes.py
app/models/: __init__.py  models.py
app/routers/: __init__.py  activity.py  agents.py  automations.py  settings.py
app/schemas/: schemas.py
app/services/: n8n_client.py  services.py
